Bug 444303 - Conflicting information about monitor refresh rate
Summary: Conflicting information about monitor refresh rate
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: platform-drm (other bugs)
Version First Reported In: 5.23.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 444420 (view as bug list)
Depends on:
Blocks:
 
Reported: 2021-10-24 02:15 UTC by benttotheright
Modified: 2021-10-26 10:39 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.23.2
Sentry Crash Report:


Attachments
xrandr and drm_info output (66.71 KB, text/plain)
2021-10-24 02:15 UTC, benttotheright
Details

Note You need to log in before you can comment on or make changes to this bug.
Description benttotheright 2021-10-24 02:15:12 UTC
Created attachment 142806 [details]
xrandr and drm_info output

SUMMARY

Two monitor setup:
1) 1440p@144Hz with FreeSync 
2) 1080p@60Hz

According to VRRTest, the primary monitor does indeed run at 144Hz and FreeSync is enabled as well. 

When I check wayland-info or xrandr, that monitor is shown to be running at 59.951 and 59.91Hz, respectively. Similarly, mpv does show that the display fps are 59.951. 

On the other hand, drm_info shows a mode titled "2560x1440@144.01 driver phsync nvsync" and a mode titled "2560x1440@59.95 preferred driver phsync nvsync".

Something doesn't really add up here. 


STEPS TO REPRODUCE
1. run "xrandr"
2. run "wayland-info"
3. run "drm_info"
4. run "kscreen-doctor -o"
5. check display configuration
6. compare reported values for display refresh rate

OBSERVED RESULT

The refresh rate varies across different information sources.

EXPECTED RESULT

The information across those different sources should align.


SOFTWARE/OS VERSIONS

Linux/KDE Plasma: EndeavourOS, 5.14.14-arch1-1
(available in About System)
KDE Plasma Version: 5.23.1
KDE Frameworks Version: 5.87.0
Qt Version: 5.15.2
Comment 1 Bug Janitor Service 2021-10-24 12:02:22 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/1561
Comment 2 Zamundaaa 2021-10-24 16:37:59 UTC
Git commit ca58ee875f269fd6a8fc222f5690fa2522304e7e by Xaver Hugl.
Committed on 24/10/2021 at 12:01.
Pushed by zamundaaa into branch 'master'.

WaylandOutput: schedule update on mode change

Without this there can be a mismatch between what clients expect and what
KWin actually uses, causing for example stutter in video players.
FIXED-IN: 5.23.2

M  +1    -0    src/waylandoutput.cpp

https://invent.kde.org/plasma/kwin/commit/ca58ee875f269fd6a8fc222f5690fa2522304e7e
Comment 3 Zamundaaa 2021-10-24 16:38:20 UTC
Git commit 1fb8ebc92cbecaf5ddca538e412eb7484e89eb51 by Xaver Hugl.
Committed on 24/10/2021 at 16:38.
Pushed by zamundaaa into branch 'Plasma/5.23'.

WaylandOutput: schedule update on mode change

Without this there can be a mismatch between what clients expect and what
KWin actually uses, causing for example stutter in video players.
FIXED-IN: 5.23.2


(cherry picked from commit ca58ee875f269fd6a8fc222f5690fa2522304e7e)

M  +1    -0    src/waylandoutput.cpp

https://invent.kde.org/plasma/kwin/commit/1fb8ebc92cbecaf5ddca538e412eb7484e89eb51
Comment 4 Vlad Zahorodnii 2021-10-26 10:39:48 UTC
*** Bug 444420 has been marked as a duplicate of this bug. ***